src/main/k8s/hw1/003_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hw-svc
  namespace: hw-churkin
spec:
  selector:
    app: hw1
  ports:
  - protocol: TCP
    port: 8000
    targetPort: web
    name: hw-port
  type: NodePort
